--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,11 @@
         {"src": "*.js", "use": "@vercel/node"}
     ],
     "routes" : [
-        {"src":"/{.*}", "dest": "/"}
+        {"src":"/{.*}", "dest": "/"},
+        {
+            "src": "/api-docs",
+            "dest": "/index.js"
+          }
+
     ]
 }
