--- a/.env
+++ b/.env
@@ -9,10 +9,10 @@ JWT_SECRET=RtbF1jH0Ilzv5rFLwmDOQNtJQqHTr-H9zICXxH2AvMrcS9rvk1tpDEYl-t652mrh
 
 
 
-//mongodb+srv://duvanaponteramirez:On3gOVMQX7xjOMkO@fooddelivery.i2qf1.mongodb.net/?retryWrites=true&w=majority&appName=FoodDelivery
+##mongodb+srv://duvanaponteramirez:On3gOVMQX7xjOMkO@fooddelivery.i2qf1.mongodb.net/?retryWrites=true&w=majority&appName=FoodDelivery
 
 
-//password= On3gOVMQX7xjOMkO
-//username = duvanaponteramirez
-//ipActual = IP actual  (181.51.34.101)
-//mongodb+srv://duvanaponteramirez:GN69rP7cuZbdqMpb@finfood.o9rbs.mongodb.net/?retryWrites=true&w=majority&appName=finfood
+##password= On3gOVMQX7xjOMkO
+##username = duvanaponteramirez
+##ipActual = IP actual  (181.51.34.101)
+##mongodb+srv://duvanaponteramirez:GN69rP7cuZbdqMpb@finfood.o9rbs.mongodb.net/?retryWrites=true&w=majority&appName=finfood
