--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
     ],
     "routes": [
       {
-        "src": "/api-docs",
-        "dest": "/index.js"
+        "src": "/api/(.*)",
+        "dest": "index.js"
       }
     ]
   }
